fix: navigation mobile

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -13,3 +13,14 @@
 .top-banner > .MuiTypography-root {
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 768px) {
+  .top-banner {
+    margin-top: 0;
+    min-height: 300px;
+  }
+
+  .top-banner > .MuiTypography-root {
+    font-size: 60px;
+  }
+}
